worked on teams sexction, added reviews, and made responsive. fixed responsive errors

--- a/employes.html
+++ b/employes.html
@@ -24,9 +24,7 @@
     <!--------------------------------------------- navbar-------------------------------------- -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">
-          Realtors <i class="ri-home-2-fill"></i>
-        </a>
+        <a href="index.html" class="nav__logo"> Chaudhry Estate & Builders </a>
 
         <div class="nav__menu">
           <ul class="nav__list">
@@ -76,37 +74,76 @@
     <section class="popular section" id="popular">
       <div class="container">
         <span class="section__subtitle">Our Staff</span>
-        <h2 class="section__title">Meet the team<span>.</span></h2>
+        <h2 class="section__title">Meet our sales team<span>.</span></h2>
 
         <div class="team-container">
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Chaudhry Shahbaz</h3>
+            <p class="team-position">Sales Executive</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Javed Amin Chuhan</h3>
+            <p class="team-position">Sales Agents</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Asim Bhatti</h3>
+            <p class="team-position">Sales Agents</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Jeevan Banker</h3>
+            <p class="team-position">Sales Agents</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------Our operations------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <h2 class="section__title">Meet our operations team<span>.</span></h2>
+
+        <div class="team-container">
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Salman Rasheed</h3>
+            <p class="team-position">Booking Agent</p>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Chaudhry Shahnawaz</h3>
+            <p class="team-position">Marketing Director & Agent</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Rafique</h3>
+            <p class="team-position">Rent Agents</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Shahzaib</h3>
+            <p class="team-position">Rent Agents</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Zafar</h3>
+            <p class="team-position">Rent Agents</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Muhammad Younis</h3>
+            <p class="team-position">Office Administrator</p>
           </div>
         </div>
       </div>
@@ -115,8 +152,8 @@
     <!-- -----------------------------------CEO------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
-        <span class="section__subtitle">Our Leader</span>
-        <h2 class="section__title">Meet the CEO<span>.</span></h2>
+        <span class="section__subtitle">Our CEO</span>
+        <h2 class="section__title">Chaudhry Shahzad<span>.</span></h2>
 
         <div class="ceo-container">
           <div class="ceo-details">
@@ -124,14 +161,17 @@
           </div>
           <div class="ceo-words-wrapper">
             <p class="ceo-words">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni
-              tempora voluptatibus suscipit repellendus, minima dolores dolorem
-              ut hic est eum cum, nam sint esse voluptatem! Nulla sequi
-              dignissimos assumenda vero corrupti! Quia ab, dignissimos
-              laudantium veritatis suscipit pariatur maiores quidem voluptatum
-              similique. Quaerat, nihil ullam provident dolor maxime tempore est
-              corrupti molestias harum mollitia repellat vitae eligendi nam
-              cupiditate modi.
+              As the CEO of Chaudhry Estate, I take pride in guiding our clients
+              through every step of their real estate journey. With a deep
+              understanding of the market and a passion for property, I lead a
+              dedicated team focused on delivering personalized service and
+              expert advice. Whether you're looking to buy your dream home, sell
+              a property, or make a smart investment, we ensure that your
+              experience is seamless and rewarding. At Chaudhry Estate, we
+              believe in building lasting relationships and turning your real
+              estate aspirations into reality. Our commitment to integrity and
+              excellence is what sets us apart, and we're excited to help you
+              achieve your goals in the ever-evolving world of real estate.
             </p>
           </div>
         </div>
@@ -141,38 +181,117 @@
     <!-- -----------------------------------alumini------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
-        <span class="section__subtitle">Alumni</span>
         <h2 class="section__title">Meet our Alumni<span>.</span></h2>
 
         <div class="team-container">
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Khizer Abbas</h3>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Muhammad Tariq</h3>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Syed Karim Shah</h3>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Altaf Ayub Bhurt</h3>
           </div>
 
           <div class="team-details">
             <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Hamza</h3>
-            <p class="team-position">Manager</p>
+            <h3 class="team-name">Mohsin Sheikh</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Hafeez</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Gohar Bhatti</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Noman Ahmed</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Mohsin Sheikh</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Hammad Zafar</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Rafaqat Rasheed</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Mr. Austin</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Irfan Sheikh</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Hameed Bharoch</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Zain Samejo</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Gul Hassan</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Ghulam Rasool</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Muhammad Ali</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Jamshair</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Muhammad Younis</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Mohd Mehboob</h3>
+          </div>
+
+          <div class="team-details">
+            <img src="images/face2.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Hameed Bharoch</h3>
           </div>
         </div>
       </div>
@@ -183,9 +302,7 @@
     <footer class="footer section">
       <div class="footer__container container grid">
         <div>
-          <a href="#" class="footer__logo">
-            Realtors <i class="ri-home-2-fill"></i>
-          </a>
+          <img src="images/logo.jpg" class="logo-img" alt="" />
           <p class="footer__description">
             Our vision is to provide our people <br />
             the best place to live.
