--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <!--------------------------------------------- navbar-------------------------------------- -->
     <header class="header" id="header">
       <nav class="nav container">
-        <a href="#" class="nav__logo">
-          Realtors <i class="ri-home-2-fill"></i>
-        </a>
+        <a href="#" class="nav__logo">Chaudhry Estate & Builders</a>
 
         <div class="nav__menu">
           <ul class="nav__list">
@@ -49,7 +47,7 @@
             </li>
             <li class="nav__item">
               <a href="employes.html" class="nav__link">
-                <i class="ri-award-fill"></i>
+                <i class="ri-team-fill"></i>
                 <span>Team</span>
               </a>
             </li>
@@ -83,10 +81,13 @@
           </div>
           <div class="on-overlay">
             <div class="logo">
-              <img src="images/logo.png" />
+              <img src="images/logo.jpg" />
             </div>
             <div class="hero-content">
-              <p>Discover Your Dream Home</p>
+              <p>
+                Discover Your
+                <span style="color: var(--second-color)">Dream</span> Home
+              </p>
               <a href="login.html" class="Btn"></a>
             </div>
           </div>
@@ -230,9 +231,22 @@
                 Value We Serve To You<span>.</span>
               </h2>
               <p class="value__description">
-                We are always eager to help by providing the best services for
-                you. We believe that a good place to live can make your life
-                better.
+                Welcome to Chaudhry Estate & Builders, your premier real estate
+                agency in Clifton and DHA, Karachi, Pakistan. With a commitment
+                to excellence and customer satisfaction, we offer comprehensive
+                services for all your property needs. Whether you're looking to
+                rent, sell, or purchase a property, our team of experts is
+                dedicated to providing personalized solutions to meet your
+                unique requirements. From luxurious apartments to spacious
+                houses, we have an extensive portfolio of properties in Clifton
+                and DHA Karachi's most sought-after locations. Our services
+                include:
+                <span style="color: var(--second-color)">1.</span> Property
+                rentals <span style="color: var(--second-color)">2.</span> Sales
+                and purchases
+                <span style="color: var(--second-color)">3.</span> Property
+                valuations <span style="color: var(--second-color)">4.</span>
+                Investment advice
               </p>
             </div>
 
@@ -422,15 +436,17 @@
                     <img src="images/right-quote.png" class="quote" alt="" />
                     <div class="reviews-content">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt quasi sit quisquam iste reiciendis provident
-                        laudantium ipsum praesentium doloremque aut?
+                        Working with Chaudhry Estate was an absolute pleasure.
+                        Shazad and his team were incredibly knowledgeable and
+                        responsive throughout the entire process. They
+                        understood exactly what I was looking for and went above
+                        and beyond to find the perfect property.
                       </p>
                       <div class="details">
                         <div class="imgbox">
                           <img src="images/face2.jpg" alt="" />
                         </div>
-                        <h3>Client</h3>
+                        <h3>Abdullah</h3>
                       </div>
                     </div>
                   </div>
@@ -441,15 +457,17 @@
                     <img src="images/right-quote.png" class="quote" alt="" />
                     <div class="reviews-content">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt quasi sit quisquam iste reiciendis provident
-                        laudantium ipsum praesentium doloremque aut?
+                        Selling my home with Chaudhry Estate was a smooth and
+                        efficient experience. Shazad’s expertise and clear
+                        communication made all the difference. They handled
+                        everything with professionalism, making me feel
+                        supported throughout.
                       </p>
                       <div class="details">
                         <div class="imgbox">
                           <img src="images/face2.jpg" alt="" />
                         </div>
-                        <h3>Client</h3>
+                        <h3>Ali</h3>
                       </div>
                     </div>
                   </div>
@@ -460,15 +478,17 @@
                     <img src="images/right-quote.png" class="quote" alt="" />
                     <div class="reviews-content">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt quasi sit quisquam iste reiciendis provident
-                        laudantium ipsum praesentium doloremque aut?
+                        As a first-time homebuyer, I was so grateful for the
+                        patience and guidance from Shazad at Chaudhry Estate.
+                        They explained everything clearly and never pressured
+                        me. I ended up with a home I love, thanks to their
+                        expert help
                       </p>
                       <div class="details">
                         <div class="imgbox">
                           <img src="images/face2.jpg" alt="" />
                         </div>
-                        <h3>Client</h3>
+                        <h3>Khalid</h3>
                       </div>
                     </div>
                   </div>
@@ -479,15 +499,38 @@
                     <img src="images/right-quote.png" class="quote" alt="" />
                     <div class="reviews-content">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Incidunt quasi sit quisquam iste reiciendis provident
-                        laudantium ipsum praesentium doloremque aut?
+                        Chaudhry Estate helped me secure a fantastic investment
+                        property. Shazad’s market knowledge is top-notch, and
+                        his team made the entire process seamless. I’m thrilled
+                        with the outcome and look forward to working with them
+                        again
                       </p>
                       <div class="details">
                         <div class="imgbox">
                           <img src="images/face2.jpg" alt="" />
                         </div>
-                        <h3>Client</h3>
+                        <h3>Umer</h3>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="testimonialbox">
+                    <img src="images/right-quote.png" class="quote" alt="" />
+                    <div class="reviews-content">
+                      <p>
+                        I couldn’t have asked for a better experience with
+                        Chaudhry Estate. Shazad truly listened to my needs and
+                        found the perfect property for me. Their commitment and
+                        care made all the difference. Highly recommend this
+                        team!
+                      </p>
+                      <div class="details">
+                        <div class="imgbox">
+                          <img src="images/face2.jpg" alt="" />
+                        </div>
+                        <h3>Imran</h3>
                       </div>
                     </div>
                   </div>
@@ -502,7 +545,7 @@
       <!-- -----------------------------------Subscribe------------------------------------------ -->
       <section class="subscribe section">
         <div class="subscribe__container container">
-          <h1 class="subscribe__title">Get Started With Realtors</h1>
+          <h1 class="subscribe__title">Get Started With Chaudhry Estate</h1>
           <p class="subscribe__description">
             Subscribe and find super attractive price quotes and discounts from
             our team, Determine your residence immediately
@@ -523,9 +566,7 @@
     <footer class="footer section">
       <div class="footer__container container grid">
         <div>
-          <a href="#" class="footer__logo">
-            Realtors <i class="ri-home-2-fill"></i>
-          </a>
+          <img src="images/logo.jpg" class="logo-img" alt="" />
           <p class="footer__description">
             Our vision is to provide our people <br />
             the best place to live.
@@ -608,7 +649,9 @@
       </div>
 
       <div class="footer__info container">
-        <span class="footer__copy"> &#169; Realtors. All rights reserved </span>
+        <span class="footer__copy">
+          &#169; Chaudhry Estate. All rights reserved
+        </span>
 
         <div class="footer__privacy">
           <a href="#">Terms & Agreements</a>
