changed the teams look and added new certificates

--- a/employes.html
+++ b/employes.html
@@ -70,6 +70,64 @@
       </nav>
     </header>
 
+    <!-- -----------------------------------CEO------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <span class="section__subtitle">Our CEO</span>
+        <h2 class="section__title">Chaudhry Shahzad<span>.</span></h2>
+
+        <div class="ceo-container">
+          <div class="ceo-details">
+            <img src="images/team1.jpg" class="ceo-img" alt="" />
+          </div>
+          <div class="ceo-words-wrapper">
+            <p class="ceo-words">
+              As the CEO of Chaudhry Estate, I take pride in guiding our clients
+              through every step of their real estate journey. With a deep
+              understanding of the market and a passion for property, I lead a
+              dedicated team focused on delivering personalized service and
+              expert advice. Whether you're looking to buy your dream home, sell
+              a property, or make a smart investment, we ensure that your
+              experience is seamless and rewarding. At Chaudhry Estate, we
+              believe in building lasting relationships and turning your real
+              estate aspirations into reality. Our commitment to integrity and
+              excellence is what sets us apart, and we're excited to help you
+              achieve your goals in the ever-evolving world of real estate.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- -----------------------------------MD------------------------------------------ -->
+    <section class="popular section" id="popular">
+      <div class="container">
+        <span class="section__subtitle">Our MD</span>
+        <h2 class="section__title">Chaudhry Shahbaz<span>.</span></h2>
+
+        <div class="ceo-container">
+          <div class="ceo-details">
+            <img src="images/team2.jpg" class="ceo-img" alt="" />
+          </div>
+          <div class="ceo-words-wrapper">
+            <p class="ceo-words">
+              Chaudhry Shahbaz is the Managing Director of Chaudhry Estate, a
+              leading real estate agency based in Clifton, Karachi. With a keen
+              eye for property trends and a strong network in the industry, he
+              has been instrumental in driving the company's growth and success.
+              Chaudhry Shahbaz is known for his strategic decision-making,
+              exceptional leadership skills, and commitment to client
+              satisfaction. Under his guidance, Chaudhry Estate has successfully
+              handled numerous high-profile transactions, earning a reputation
+              for excellence in the market. His expertise in both residential
+              and commercial real estate makes him a trusted advisor for clients
+              seeking to make informed investment decisions.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- -----------------------------------Our Employees------------------------------------------ -->
     <section class="popular section" id="popular">
       <div class="container">
@@ -78,27 +136,29 @@
 
         <div class="team-container">
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Chaudhry Shahbaz</h3>
+            <img src="images/team3.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Chaudhry Sheraz</h3>
             <p class="team-position">Sales Executive</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/team4.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Ramaish B. Mana</h3>
+            <p class="team-position">Team Led</p>
+          </div>
+
+          <div class="team-details">
+            <img src="images/team6.jpg" alt="" class="team-img" />
             <h3 class="team-name">Javed Amin Chuhan</h3>
-            <p class="team-position">Sales Agents</p>
+            <p class="team-position">Senior Specialist</p>
+            <p class="team-position">Rent/Sale</p>
           </div>
 
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Asim Bhatti</h3>
-            <p class="team-position">Sales Agents</p>
-          </div>
-
-          <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
-            <h3 class="team-name">Jeevan Banker</h3>
-            <p class="team-position">Sales Agents</p>
+            <img src="images/team7.jpg" alt="" class="team-img" />
+            <h3 class="team-name">Asim Anwar Bhatti</h3>
+            <p class="team-position">Sales Specialist</p>
+            <p class="team-position">Sale/Rent</p>
           </div>
         </div>
       </div>
@@ -111,9 +171,9 @@
 
         <div class="team-container">
           <div class="team-details">
-            <img src="images/face2.jpg" alt="" class="team-img" />
+            <img src="images/team5.jpg" alt="" class="team-img" />
             <h3 class="team-name">Salman Rasheed</h3>
-            <p class="team-position">Booking Agent</p>
+            <p class="team-position">Operational Manager</p>
           </div>
 
           <div class="team-details">
@@ -144,35 +204,6 @@
             <img src="images/face2.jpg" alt="" class="team-img" />
             <h3 class="team-name">Muhammad Younis</h3>
             <p class="team-position">Office Administrator</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- -----------------------------------CEO------------------------------------------ -->
-    <section class="popular section" id="popular">
-      <div class="container">
-        <span class="section__subtitle">Our CEO</span>
-        <h2 class="section__title">Chaudhry Shahzad<span>.</span></h2>
-
-        <div class="ceo-container">
-          <div class="ceo-details">
-            <img src="images/face2.jpg" class="ceo-img" alt="" />
-          </div>
-          <div class="ceo-words-wrapper">
-            <p class="ceo-words">
-              As the CEO of Chaudhry Estate, I take pride in guiding our clients
-              through every step of their real estate journey. With a deep
-              understanding of the market and a passion for property, I lead a
-              dedicated team focused on delivering personalized service and
-              expert advice. Whether you're looking to buy your dream home, sell
-              a property, or make a smart investment, we ensure that your
-              experience is seamless and rewarding. At Chaudhry Estate, we
-              believe in building lasting relationships and turning your real
-              estate aspirations into reality. Our commitment to integrity and
-              excellence is what sets us apart, and we're excited to help you
-              achieve your goals in the ever-evolving world of real estate.
-            </p>
           </div>
         </div>
       </div>
